--- a/Makefile_Linux
+++ b/Makefile_Linux
@@ -4,7 +4,7 @@
 
 # Compiler settings - Can be customized.
 CC = gcc
-CXXFLAGS = -std=c17 -Wall -g -Ofast
+CXXFLAGS = -std=c17 -Wall -Wextra -g -O3
 LDFLAGS = -lSDL2 -lSDL2_image -lm
 
 # Makefile settings - Can be customized.
