--- a/Makefile_Linux
+++ b/Makefile_Linux
@@ -5,7 +5,7 @@
 # Compiler settings - Can be customized.
 CC = gcc
 CXXFLAGS = -std=c17 -Wall -Wextra -g -O3
-LDFLAGS = '-Wl,-rpath,$$ORIGIN' -lSDL2 -lSDL2_image -lSDL2_net -lm
+LDFLAGS = '-Wl,-rpath,$$ORIGIN' -lSDL2 -lSDL2_image -lSDL2_net -lSDL2_mixer -lm
 
 # Makefile settings - Can be customized.
 APPNAME = build/Multris
